--- a/css/styles.css
+++ b/css/styles.css
@@ -5,3 +5,24 @@ input {
     margin: 8px 0;
     box-sizing: border-box;
   }
+  label {
+    padding: 12px 12px 12px 0;
+    display: inline-block;
+  }
+  input[type=submit] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    float: right;
+    font-size:20px;
+  }
+  input[type=submit]:hover {
+    background-color: #45a049;
+  }
+  input[type=radio]{
+      font-size:20px;
+  }
+  
