--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,13 @@
 
+*{
+  box-sizing:border-box;
+  padding:0;
+  margin:0;
+}
+#top {
+background-color:bisque;
+color:black;
+}
 input {
     width: 100%;
     padding: 12px 20px;
@@ -9,20 +18,30 @@ input {
     padding: 12px 12px 12px 0;
     display: inline-block;
   }
-  input[type=submit] {
-    background-color: #4CAF50;
+  button[type=submit] {
+    background-color:black;
     color: white;
-    padding: 12px 20px;
+    padding: 10px 15px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    float: right;
     font-size:20px;
   }
-  input[type=submit]:hover {
-    background-color: #45a049;
+  button[type=reset]{
+    background-color:red;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size:20px;
+    margin-left:40px;
   }
+
   input[type=radio]{
       font-size:20px;
   }
+  
+    
+  
   
