changed the background-color of the footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ input {
     font-size:20px;
   }
   button[type=reset]{
-    background-color:red;
+    background-color:grey;
     color: white;
     padding: 10px 15px;
     border: none;
@@ -42,7 +42,7 @@ input {
       font-size:20px;
   }
   .footer{
-    background-color:grey;
+    background-color:burlywood;
     text-align: center;
     color: black;
     padding-bottom: 2%;
