changeed the background-color of the body

--- a/css/styles.css
+++ b/css/styles.css
@@ -55,7 +55,7 @@ input {
     margin-top:20px;
   }
   body{
-    background-image:url('https://bit.ly/2DwftSH');
+    background-color:rgba(240,240,240);
     background-repeat:no-repeat;
     background-size: cover;
   }
